; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/net/dccp/ccids/lib/extr_loss_interval.c_tfrc_lh_is_new_loss.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/net/dccp/ccids/lib/extr_loss_interval.c_tfrc_lh_is_new_loss.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.tfrc_loss_interval = type { i32, i64, i32 }
%struct.tfrc_rx_hist_entry = type { i32, i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.tfrc_loss_interval*, %struct.tfrc_rx_hist_entry*)* @tfrc_lh_is_new_loss to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @tfrc_lh_is_new_loss(%struct.tfrc_loss_interval* %0, %struct.tfrc_rx_hist_entry* %1) #0 {
  %3 = alloca %struct.tfrc_loss_interval*, align 8
  %4 = alloca %struct.tfrc_rx_hist_entry*, align 8
  store %struct.tfrc_loss_interval* %0, %struct.tfrc_loss_interval** %3, align 8
  store %struct.tfrc_rx_hist_entry* %1, %struct.tfrc_rx_hist_entry** %4, align 8
  %5 = load %struct.tfrc_loss_interval*, %struct.tfrc_loss_interval** %3, align 8
  %6 = getelementptr inbounds %struct.tfrc_loss_interval, %struct.tfrc_loss_interval* %5, i32 0, i32 2
  %7 = load i32, i32* %6, align 8
  %8 = load %struct.tfrc_rx_hist_entry*, %struct.tfrc_rx_hist_entry** %4, align 8
  %9 = getelementptr inbounds %struct.tfrc_rx_hist_entry, %struct.tfrc_rx_hist_entry* %8, i32 0, i32 1
  %10 = load i32, i32* %9, align 4
  %11 = call i64 @dccp_delta_seqno(i32 %7, i32 %10)
  %12 = icmp sgt i64 %11, 0
  br i1 %12, label %13, label %29

13:                                               ; preds = %2
  %14 = load %struct.tfrc_loss_interval*, %struct.tfrc_loss_interval** %3, align 8
  %15 = getelementptr inbounds %struct.tfrc_loss_interval, %struct.tfrc_loss_interval* %14, i32 0, i32 1
  %16 = load i64, i64* %15, align 8
  %17 = icmp ne i64 %16, 0
  br i1 %17, label %27, label %18

18:                                               ; preds = %13
  %19 = load %struct.tfrc_rx_hist_entry*, %struct.tfrc_rx_hist_entry** %4, align 8
  %20 = getelementptr inbounds %struct.tfrc_rx_hist_entry, %struct.tfrc_rx_hist_entry* %19, i32 0, i32 0
  %21 = load i32, i32* %20, align 4
  %22 = load %struct.tfrc_loss_interval*, %struct.tfrc_loss_interval** %3, align 8
  %23 = getelementptr inbounds %struct.tfrc_loss_interval, %struct.tfrc_loss_interval* %22, i32 0, i32 0
  %24 = load i32, i32* %23, align 8
  %25 = call i32 @SUB16(i32 %21, i32 %24)
  %26 = icmp sgt i32 %25, 4
  br label %27

27:                                               ; preds = %18, %13
  %28 = phi i1 [ true, %13 ], [ %26, %18 ]
  br label %29

29:                                               ; preds = %27, %2
  %30 = phi i1 [ false, %2 ], [ %28, %27 ]
  %31 = zext i1 %30 to i32
  ret i32 %31
}

declare dso_local i64 @dccp_delta_seqno(i32, i32) #1

declare dso_local i32 @SUB16(i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
